--- a/src/app/About/About.component.html
+++ b/src/app/About/About.component.html
@@ -104,7 +104,7 @@
 
   <div class="about-emoji">
     <div class="about-grids">
-      <img src="../assets/images/grocery-cart.png" width="80px" height="80px">
+      <img src="../assets/images/shopping-bag (1).png" width="80px" height="80px">
       <h2>{{productcount + "+"}}</h2>
       <p class="text">Grocery Products</p>
     </div>
