--- a/src/app/Admin/AdminHome/AdminHome.component.html
+++ b/src/app/Admin/AdminHome/AdminHome.component.html
@@ -30,8 +30,11 @@ v
       <a routerLink="/admin/queries"><img src="assets/images/question.png"  width="40px" height="40px" class="nav-img"/><p>Queries</p></a>
     </div>
     <div class="nav-detail">
-      <a routerLink="/admin/settings"><img src="assets/images/gear.png"  width="40px" height="40px" class="nav-img"/><p>Settings</p></a>
+      <a routerLink="/home"><img src="assets/images/logout.png"  width="40px" height="40px" class="nav-img"/><p>Logout</p></a>
     </div>
+    <!-- <div class="nav-detail">
+      <a routerLink="/admin/settings"><img src="assets/images/gear.png"  width="40px" height="40px" class="nav-img"/><p>Settings</p></a>
+    </div> -->
   </div>
 
 </div>
