--- a/src/app/Admin/Products/Products.component.html
+++ b/src/app/Admin/Products/Products.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="table-query">
 
-
+<input type="submit" value="ADD PRODUCT"  (click)="addProduct(products,products.id)" class="add-button" >
   <table class="w-full">
     <thead>
         <tr>
@@ -22,7 +22,7 @@
             <th>Category</th>
              <th>Delete</th>
             <th>Edit</th>
-            <th>Add</th>
+
         </tr>
     </thead>
     <tbody>
@@ -40,7 +40,4 @@
     </tbody>
 
 </table>
-<button (click)="addProduct(products,products.id)">Add</button></div>
-
-
 </div>
