--- a/src/app/Delivery/Delivery.component.html
+++ b/src/app/Delivery/Delivery.component.html
@@ -108,7 +108,7 @@
 
 <div >
   <h4 style="color:red">Fill out the fields to proceed payment process</h4>
-  <img src="assets/images/payment.jpg" width="100%" height="150px">
+  <img src="assets/images/payment-removebg-preview.png" width="100%" height="150px">
 </div>
     </ng-container>
     </div>
