--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -24,12 +24,12 @@
 
     <div class="box">
       <h3>Quick Links</h3>
-      <a routerLink="home" class="links"><i class="fa fa-arrow-right"></i> Home</a>
-      <a routerLink="about" class="links"><i class="fa fa-arrow-right"></i> About us</a>
+      <a routerLink="/home" class="links"><i class="fa fa-arrow-right"></i> Home</a>
+      <a routerLink="/about" class="links"><i class="fa fa-arrow-right"></i> About us</a>
       <!-- <a routerLink="" class="links"><i class="fa fa-arrow-right"></i> Offers</a> -->
-      <a routerLink="contact" class="links"><i class="fa fa-arrow-right"></i> Contact</a>
-      <a routerLink="produt" class="links"><i class="fa fa-arrow-right"></i> Shop</a>
-      <a routerLink="login" class="links"><i class="fa fa-arrow-right"></i> Sign In</a>
+      <a routerLink="/contact" class="links"><i class="fa fa-arrow-right"></i> Contact</a>
+      <a routerLink="/product" class="links"><i class="fa fa-arrow-right"></i> Shop</a>
+      <a routerLink="/login" class="links"><i class="fa fa-arrow-right"></i> Sign In</a>
 
     </div>
 
