--- a/src/app/Admin/Products/Products.component.css
+++ b/src/app/Admin/Products/Products.component.css
@@ -22,3 +22,18 @@ tbody tr{
 .table-query{
   padding: 35px 35px 140px;
 }
+.add-button{
+  padding: 10px;
+margin-bottom: 20px;
+border-radius: 5px;
+background: #e0e0e0;
+border: #989595 1px solid;
+color: black;
+width: fit-content;
+font-size: 16px;
+font-weight: bold;
+letter-spacing: 1px;
+}
+.add-button:hover{
+  box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
+}
