--- a/src/app/Header/Header.component.html
+++ b/src/app/Header/Header.component.html
@@ -1,5 +1,5 @@
 <Header>
-  <a routerLink="home" class="logo"><img src="assets\images\new_logo.png" width="200px" height="60px"></a>
+  <a routerLink="/home" class="logo"><img src="assets\images\new_logo.png" width="200px" height="60px"></a>
   <nav>
     <ul>
       <li><a routerLink="/home">Home</a></li>
@@ -14,8 +14,15 @@
       <!-- <li><i class="fa fa-shopping-cart cart-icon" routerLink="/cart"></i>
       <span class="badge">{{totalItem}}</span></li>-->
       <!-- <li><a routerLink="contact">Contact</a></li> -->
-       <li><a routerLink="/login">Login</a></li>
-       <li><a routerLink="/admin/dashboard">Dashboard</a></li>
+       <li>
+        <a *ngIf="usercount===0" routerLink="/login">Login</a>
+         <a  *ngIf="usercount===1" (click)="removeUser(users.id)">Logout</a>
+
+      </li>
+
+        <a><li  *ngFor="let user of users" (click)="removeUser(user.id)" >.</li></a>
+
+       <!-- <li ><a routerLink="/admin/dashboard">Dashboard</a></li> -->
 
         <!-- <li  [hidden]="loginStatus" (click)="logIn()"><a routerLink="/login">Login</a></li>
 <li [hidden]="!loginStatus" (click)="logOut()">Logout</li>-->
