--- a/src/app/Admin/Orders/Orders.component.html
+++ b/src/app/Admin/Orders/Orders.component.html
@@ -9,7 +9,33 @@
       <p>Hemaltha<span>Admin</span></p>
     </div>
   </div>
-  <div class="cart-table">
+
+  <div *ngFor="let orderItem of orders">
+    <h2>Order ID: {{ orderItem.id }}</h2>
+
+    <div *ngFor="let user of orderItem.user">
+      <h3>User Details:</h3>
+      <p>Email: {{ user.email }}</p>
+      <p>Password: {{ user.pword }}</p>
+      <p>User Type: {{ user.userType }}</p>
+      <p>ID: {{ user.id }}</p>
+    </div>
+
+    <div *ngFor="let item of orderItem.items">
+      <h3>Item Details:</h3>
+      <p>ID: {{ item.id }}</p>
+      <p>Name: {{ item.name }}</p>
+      <p>Price: {{ item.price }}</p>
+      <p>Quantity: {{ item.quantity }}</p>
+      <p>Disabled: {{ item.disabled }}</p>
+      <p>Image: {{ item.image }}</p>
+      <p>Detail: {{ item.detail }}</p>
+      <p>Weight: {{ item.weight }}</p>
+      <p>Rating: {{ item.rating }}</p>
+      <p>Category: {{ item.category }}</p>
+    </div>
+  </div>
+  <!-- <div class="cart-table">
     <div *ngIf="orders.length>0">
     <table>
       <thead>
@@ -43,5 +69,5 @@
 <div class="order"><h3>No orders available</h3></div>
 </div>
 </div>
-<img src="assets/images/home_fruit.png" width="1147px">
+<img src="assets/images/home_fruit.png" width="1147px">-->
 </div>
