--- a/src/app/Admin/EditProduct/EditProduct.component.html
+++ b/src/app/Admin/EditProduct/EditProduct.component.html
@@ -5,7 +5,7 @@
       <span style="font-size:25px;cursor:pointer; color:grey;" class="nav">☰ Edit Product</span>
     </div>
     <div class="profile">
-      <img src="assets/images/women1.jpg" class="pro-img" />
+      <img src="assets/images/user.png" class="pro-img" />
       <p>Hemaltha<span>Admin</span></p>
     </div>
   </div>
