--- a/src/app/Admin/Orders/Orders.component.css
+++ b/src/app/Admin/Orders/Orders.component.css
@@ -28,3 +28,19 @@ td{
   text-align: center;
   padding-bottom: 60px;
 }
+.order-detail
+{
+
+  padding:15px 40px;
+}
+.grid{
+  display:grid;
+}
+.grid-three-columns{
+  grid-template-columns:repeat(5,1fr);
+  padding-left: 50px;
+  background-color: #e0e0e0;
+}
+h3{
+  color:rgba(25, 2, 94, 0.644);
+}
