--- a/src/app/About/About.component.html
+++ b/src/app/About/About.component.html
@@ -1,28 +1,26 @@
 <app-Header></app-Header>
 <div class="section">
-  <!-- <div class="cards">
-  </div>-->
   <div class="cards1">
+
     <div class="cards" id="cards">
       <img src="../../assets/images/home_fruit.png">
     </div>
+
     <div class="about-flex">
+
       <div class="picture_2">
-
-
         <img src="assets/images/about_buy.png">
-
       </div>
+
       <div class="content">
         <h2>WELCOME TO <SPAN STYLE="font-weight: bold;color: rgb(21, 163, 23);">GROZZY WORLD</SPAN></h2>
         <h5><SPAN
             STYLE="font-size: 15px;line-height: 35px;text-align: justify;font-weight: lighter;color: #454444;">Grozzy
             World is India’s largest online food and grocery store. Right from fresh Fruits and
             Vegetables, Rice and Dals, Spices and Seasonings to Packaged products, Beverages, Personal care
-            products, Meats – we have it all.Choose from a wide range of options
+            products, Meats – we have it all. Choose from a wide range of options
             in every category, exclusively handpicked to help you find the best quality available at the
             lowest prices.</SPAN></h5>
-        <!-- <h2><SPAN STYLE="font-weight: bold;color: rgb(21, 163, 23);">HAPPY SHOPPING</SPAN></h2><br>-->
         <h2>WHY SHOULD I USE <SPAN STYLE="font-weight: bold;color: rgb(21, 163, 23);">grozzyworld.com ?</SPAN>
         </h2>
         <h5><SPAN STYLE="font-size: 15px;line-height: 35px;font-weight: lighter;color: #454444;">grozzyworld.com allows
@@ -43,8 +41,9 @@
   </div>
 
 
-<div class="review-header">
-  <h2>WHAT OUR <span style="color: green;">CUSTOMER</span> SAY</h2></div>
+  <div class="review-header">
+    <h2>WHAT OUR <span style="color: green;">CUSTOMER</span> SAY</h2>
+  </div>
   <div class="about-review">
     <div class="about-review1">
       <div class="stars">
@@ -53,51 +52,51 @@
         <i class='fa fa-star'></i>
         <i class='fa fa-star'></i>
         <i class='fa fa-star'></i>
-    </div>
+      </div>
       <p>Nice and fast delivery within the promise time. The highlight is open delivery so we can cross check
-         while delivery the product and no Plastic bags for packing.
+        while delivery the product and no Plastic bags for packing.
       </p>
-<div class="review-image-flex">
+      <div class="review-image-flex">
 
-  <img src="../../assets/images/women1.jpg">
+        <img src="../../assets/images/women1.jpg">
 
-      <h4>Shreeshaa</h4>
+        <h4>Shreeshaa</h4>
 
 
+      </div>
     </div>
-  </div>
-  <div class="about-review1">
-    <div class="stars">
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-  </div>
+    <div class="about-review1">
+      <div class="stars">
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+      </div>
       <p>Everything arrived nicely packed and fresh. I’m very happy with all the products.
         I particularly enjoyed the pastry sheets which were very fresh.</p>
-       <div class="review-image-flex">
+      <div class="review-image-flex">
         <img src="../../assets/images/man1.jpg">
         <h4>Shrawan</h4>
       </div>
-  </div>
+    </div>
 
-  <div class="about-review1">
-    <div class="stars">
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-      <i class='fa fa-star'></i>
-  </div>
+    <div class="about-review1">
+      <div class="stars">
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+        <i class='fa fa-star'></i>
+      </div>
       <p>I ordered frozen and fresh items and they arrived with ice packs in the box so the food was kept at
         the correct temperature.I also received a free gift with my order .</p>
-        <div class="review-image-flex">
+      <div class="review-image-flex">
         <img src="../../assets/images/women2.jpg">
 
         <h4>Thanu</h4>
       </div>
-  </div>
+    </div>
   </div>
 
 
@@ -126,4 +125,3 @@
   </div>
 </div>
 <app-Footer></app-Footer>
-
