--- a/src/app/Home/Home.component.html
+++ b/src/app/Home/Home.component.html
@@ -34,7 +34,7 @@
       <p>Order in a handy way using grozzy world application</p>
     </div>
     <div class="home-flex1">
-      <img src="assets/images/replacement.png" height="60px" width="60px">
+      <img src="assets/images/replacement.png" height="60px" width="60px" title="Tooltip Text">
       <h2>Return Instant Any <span style="color:orange">Rotten</span> Items</h2>
       <p>If you get rotten items - return immediately to us</p>
     </div>
@@ -48,10 +48,7 @@
 
   <div class="cards1">
     <div class="picture_2">
-
-
       <img src="assets/images/Home-down-img.png">
-
     </div>
     <div class="content">
       <h2 class="style-heading"> Home Delivery</h2>
