--- a/src/app/Login/Login.component.html
+++ b/src/app/Login/Login.component.html
@@ -29,7 +29,8 @@
         <i class="fas fa-times-circle"></i>-->
         </div>
 
-        <input type="Submit" [disabled]="!loginForm.form.valid" value="Login" style="
+        <input type="Submit" [disabled]="!loginForm.form.valid" value="Submit" style="
+
           background: linear-gradient(270deg, #ED765E 0%, #E3BDE5 100%);
           border-radius: 15px;
           color: #000;
