--- a/src/app/Admin/AdminHome/AdminHome.component.html
+++ b/src/app/Admin/AdminHome/AdminHome.component.html
@@ -1,14 +1,5 @@
-v
 <div id="mySidenav" class="sidenav">
   <p class="logo"><img src="assets\images\new_logo.png" width="200px" height="60px"></p>
-   <!--<a href="/admin/dashboard" class="icon-a"><img src="assets/images/speedometer.png" width="40px" height="40px"><span style="padding: 10px;">Dashboard</span></a>
-  <a href="/admin/home"class="icon-a"><i class="fa fa-users icons"></i>Admin home</a>
-  <a routerLink="/admin/products"class="icon-a"><img src="assets/images/shopping-bag (1).png" width="43px" height="43px"><span style="padding: 10px;">Products</span></a>
-  <a routerLink="/admin/categories"class="icon-a"><img src="assets/images/widget.png" width="45px" height="45px"><span style="padding-left:8px;">Categories</span></a>
-  <a routerLink="/admin/orders"class="icon-a"><img src="assets/images/trolley-cart.png" width="40px" height="40px"><span style="padding-left:8px;">Orders</span></a>
-  <a routerLink="/admin/customers"class="icon-a"><img src="assets/images/customer.png" width="45px" height="45px"><span style="padding-left:8px;">Customers</span></a>
-  <a routerLink="/admin/queries"class="icon-a"><img src="assets/images/question.png" width="45px" height="45px"><span style="padding-left:8px;">Queries</span></a>
-  <a routerLink="/admin/settings"class="icon-a"><img src="assets/images/gear.png" width="40px" height="40px"><span style="padding-left:10px;">Settings</span></a> -->
 
   <div class="admin-nav">
     <div class="nav-detail">
@@ -30,34 +21,13 @@ v
       <a routerLink="/admin/queries"><img src="assets/images/question.png"  width="40px" height="40px" class="nav-img"/><p>Queries</p></a>
     </div>
     <div class="nav-detail">
-      <a routerLink="/home"><img src="assets/images/logout.png"  width="40px" height="40px" class="nav-img"/><p>Logout</p></a>
+      <a routerLink="/home" (click)="logout()"><img src="assets/images/logout.png"  width="40px" height="40px" class="nav-img"/><p>Logout</p></a>
     </div>
-    <!-- <div class="nav-detail">
-      <a routerLink="/admin/settings"><img src="assets/images/gear.png"  width="40px" height="40px" class="nav-img"/><p>Settings</p></a>
-    </div> -->
-  </div>
+    </div>
 
 </div>
 
 
-<!--
-  <div class="col-div-3">
-    <div class="box">
-      <p>67<br/><span>Today Order</span></p>
-      <i class="fa fa-users box-icon"></i>
-    </div>
-  </div>
-  <div class="col-div-3">
-    <div class="box">
-      <p>88<br/><span>Total Order</span></p>
-      <i class="fa fa-list box-icon"></i>
-    </div>
-  </div>
-  <div class="col-div-3">
-    <div class="box">
-      <p>99<br/><span>This Month</span></p>
-      <i class="fa fa-shopping-bag box-icon"></i>
-    </div>
-  </div>-->
+
 
 
