--- a/src/app/Admin/Dashboard/Dashboard.component.css
+++ b/src/app/Admin/Dashboard/Dashboard.component.css
@@ -96,11 +96,11 @@ button:hover{
   border-radius: 50%;
 }
 .circle-wrap .circle .mask {
-  clip: rect(0px, 150px, 150px, 75px);
+  clip: rect(0px, 150px, 150px, 75px);/*defines a rectangle shape that clips the top half of the circle*/
 }
 .circle-wrap .circle .mask .fill {
   clip: rect(0px, 75px, 150px, 0px);
-  background-color: rgb(17, 228, 17);
+  background-color: rgb(17, 228, 17);/*creating a half-circle shape that fills the left side of the clipped area*/
 }
 .circle-wrap .circle .mask.full,
 .circle-wrap .circle .fill {
