--- a/src/app/Admin/EditProduct/EditProduct.component.html
+++ b/src/app/Admin/EditProduct/EditProduct.component.html
@@ -15,17 +15,23 @@
     <form #editProduct="ngForm" (ngSubmit)="submit(editProduct.value)" class="common-form">
 
       <input type="text" class="form-input" placeholder="Enter Product Name" name="name"
-        ngModel="{{productData?.name}}" />
-      <input type="text" class="form-input" placeholder="Enter Product Price" name="price"
-        ngModel="{{productData?.price}}" />
-      <input type="text" class="form-input" placeholder="Enter Product Category" name="category"
-        ngModel="{{productData?.category}}" />
-      <input type="text" class="form-input" placeholder="Enter Product quantity" name="quantity"
+        ngModel="{{productData.name}}" />
+      <input type="number" class="form-input" placeholder="Enter Product Price" name="price"
+        ngModel="{{productData.price}}" />
+      <input type="tel" class="form-input" placeholder="Enter Product quantity" name="quantity"
         ngModel="{{productData?.quantity}}" />
-      <textarea type="text" class="form-input" placeholder="Enter Product Description" name="description"
-        ngModel="{{productData?.detail}}"></textarea>
+      <input type="text" class="form-input" placeholder="Enter as disabled" name="disabled"
+        ngModel="{{productData?.disabled}}" />
       <input type="text" class="form-input" placeholder="Enter Product Image URL" name="image"
         ngModel="{{productData?.image}}" />
+      <textarea type="text" class="form-input" placeholder="Enter Product Description" name="description"
+        ngModel="{{productData?.detail}}"></textarea>
+      <input type="text" class="form-input" placeholder="Enter Product weight" name="weight"
+        ngModel="{{productData?.weight}}" />
+        <input type="tel" class="form-input" placeholder="Enter Product rating" name="rating"
+        ngModel="{{productData?.rating}}" />
+      <input type="text" class="form-input" placeholder="Enter Product Category" name="category"
+        ngModel="{{productData?.category}}" />
       <button class="form-button">Update Product</button>
 
     </form>
