--- a/src/app/Cart/Cart.component.css
+++ b/src/app/Cart/Cart.component.css
@@ -7,7 +7,7 @@
 
 table
 {
-   border-collapse: collapse;
+  border-collapse: collapse;
   width: 100%;
 }
 table, td, th {
@@ -90,4 +90,20 @@ td{
 .cart-checkout-button:hover,.cart-remove-button:hover,.cart-shop-button:hover
 {
   box-shadow: 1px 2px 3px 4px rgba(12,12,12,0.2);
+}
+.quantity-input {
+  display: inline-block;
+}
+.quantity-input input[type="number"] {
+  width: 50px;
+  height: 30px;
+  border: 2px solid #a3d7d1;
+  border-radius: 5px;
+  margin: 10px ;
+  color:brown;
+  font-size: 16px;
+  padding-left: 10px;
+}
+.quantity-input input[type="number"]:focus{
+  border: 2px solid #9258a1;
 }
