--- a/src/app/Contact/Contact.component.html
+++ b/src/app/Contact/Contact.component.html
@@ -80,7 +80,7 @@
       </div>
       </div>
   </div>
-  <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=372&amp;height=383&amp;hl=en&amp;q=tamilnadu&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.gachacute.com/">www.gachacute.com</a></div>
+  <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=372&amp;height=383&amp;hl=en&amp;q=tamilnadu&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
   <style>.mapouter{text-align:right;width:100%;height:383px;}
   .gmap_canvas {overflow:hidden;background:none!important;width:100%;height:383px;}
   .gmap_iframe {height:383px!important;}</style>
