--- a/src/app/Register/Register.component.html
+++ b/src/app/Register/Register.component.html
@@ -6,18 +6,19 @@
       <form class="form" [formGroup]="loginForm1"  (submit)="submitForm()">
 
         <div class="form-control">
-          <input type="text" placeholder="Enter name" name="username"  formControlName="username" [(ngModel)]="username" pattern="^[A-Za-z\s]+$" />
-          <div *ngIf="(loginForm1.controls['username'].invalid && loginForm1.controls['username'].touched) ">
+          <input type="text" placeholder="Enter name" name="username"  formControlName="username" [(ngModel)]="username"/>
+          <div *ngIf="loginForm1.controls['username'].dirty ">
+
             <small *ngIf="loginForm1.controls['username'].errors?.['required']">Please enter name</small>
-            <small *ngIf="loginForm1.controls['username'].errors?.['pattern']">Please enter alphabets only</small>
-            <small *ngIf="loginForm1.controls['username'].errors?.['minLength']">Please enter valid name</small>
+            <small *ngIf="loginForm1.controls['username'].errors?.['minLength']">Please enter 3 name</small>
+            <small *ngIf="loginForm1.controls['username'].errors?.['pattern']">Name consist of alphabets only & minimum length should be 2</small>
 
           </div>
         </div>
 
         <div class="form-control">
           <input type="email" placeholder="Enter mail id" name="emailid" formControlName="emailid" [(ngModel)]="emailid">
-          <div *ngIf="loginForm1.controls['emailid'].invalid&&loginForm1.controls['emailid'].touched">
+          <div *ngIf="loginForm1.controls['emailid'].dirty">
             <small *ngIf="loginForm1.controls['emailid'].errors?.['required']">Please enter mailid</small>
             <small *ngIf="loginForm1.controls['emailid'].errors?.['pattern']">Please enter valid mail id
               </small>
@@ -26,34 +27,16 @@
 
         <div class="form-control">
           <input type="tel" placeholder="Enter Phone number" name="phone" formControlName="phone" [(ngModel)]="phone">
-          <div *ngIf="loginForm1.controls['phone'].invalid&&loginForm1.controls['phone'].touched">
-            <small *ngIf="loginForm1.controls['phone'].errors?.['required']">Please enter Phone number</small>
-            <small *ngIf="loginForm1.controls['phone'].errors?.['pattern']">Please enter valid Phone number
+          <div *ngIf="loginForm1.controls['phone'].dirty">
+            <small *ngIf="loginForm1.controls['phone'].errors?.['required']">Please enter phone number</small>
+            <small *ngIf="loginForm1.controls['phone'].errors?.['pattern']">Please enter valid phone number
               </small>
           </div>
         </div>
-
-        <!-- <div class="form-control">
-          <input type="tel" placeholder="Enter Address" name="address" formControlName="address" [(ngModel)]="address">
-          <div *ngIf="loginForm1.controls['address'].invalid&&loginForm1.controls['address'].touched">
-            <small *ngIf="loginForm1.controls['address'].errors?.['required']">Please enter Address</small>
-            <small *ngIf="loginForm1.controls['address'].errors?.['minLength']">Please enter valid address
-              </small>
-          </div>
-        </div>
-
-        <div class="form-control">
-          <input type="tel" placeholder="Enter Pincode" name="pincode" formControlName="pincode" [(ngModel)]="pincode">
-          <div *ngIf="loginForm1.controls['pincode'].invalid&&loginForm1.controls['pincode'].touched">
-            <small *ngIf="loginForm1.controls['pincode'].errors?.['required']">Please enter Pincode</small>
-            <small *ngIf="loginForm1.controls['pincode'].errors?.['pattern']">Please enter valid Pincode
-              </small>
-          </div>
-        </div>-->
 
         <div class="form-control">
           <input type="password" placeholder="Enter password" name="password" formControlName="password" [(ngModel)]="password">
-          <div *ngIf="loginForm1.controls['password'].invalid&&loginForm1.controls['password'].touched">
+          <div *ngIf="loginForm1.controls['password'].dirty">
             <small *ngIf="loginForm1.controls['password'].errors?.['required']">Please enter password</small>
             <small *ngIf="loginForm1.controls['password'].errors?.['pattern']">Atleast 1-uppercase, lowercase, number, special character and minimum length should be 8</small>
           </div>
@@ -61,15 +44,13 @@
 
         <div class="form-control">
           <input type="password" placeholder="Repeat password" name="cpassword" formControlName="cpassword" required="" [(ngModel)]="cpassword">
-          <div *ngIf="loginForm1.controls['cpassword'].invalid&&loginForm1.controls['cpassword'].touched">
+          <div *ngIf="loginForm1.controls['cpassword'].dirty">
             <small *ngIf="loginForm1.controls['cpassword'].errors?.['required']">Please enter confirm password</small>
-            <small *ngIf="loginForm1.controls['cpassword'].errors?.['ConfirmValidator']">Please enter same confirm
-              password</small>
-
+            <small *ngIf="loginForm1.controls['cpassword'].errors?.['ConfirmValidator']">Retype password</small>
           </div>
         </div>
 
-        <input type="Submit" [disabled]="!loginForm1.valid" value="Register" style="
+        <input type="Submit" [disabled]="!loginForm1.valid" value="Submit" style="
           background: linear-gradient(270deg, #ED765E 0%, #E3BDE5 100%);
           border-radius: 15px;
           color: #000;
